contact&link 頁面

--- a/app/index.html
+++ b/app/index.html
@@ -20,10 +20,11 @@ current: index
   <h1 class="border-width my-5 pl-3 font-weight-normal"><span class="text-primary">宣導</span>專區</h1>
   <hr>
   <!-- 按鈕 -->
-  <button class="btn btn-outline-primary">查看更多</button>
-  <button class="btn btn-primaryLight text-primary">查看更多</button>
-  <button class="btn btn-outline-accent">查看更多</button>
-  <button class="btn btn-accentLight text-accent">查看更多</button>
+  <button class="btn btn-outline-primary" type="button">查看更多</button>
+  <button class="btn btn-primaryLight text-primary" type="button">查看更多</button>
+  <button class="btn btn-outline-accent" type="button">查看更多</button>
+  <button class="btn btn-accentLight text-accent" type="button">查看更多</button>
+  如果使用a標籤，要記得加上 role="button"
   <hr>
   <!-- 手風琴 -->
   <div class="accordion" id="accordionExample">
