--- a/app/index.html
+++ b/app/index.html
@@ -6,106 +6,100 @@ current: index
 ---
 
 <div class="content container">
-  <!-- 麵包屑 -->
-  <nav aria-label="breadcrumb" class="my-4">
-    <ol class="breadcrumb">
-      <li class="breadcrumb-item">
-        <a id="accesskey-main" href="#" title="中央主要內容區" accesskey="C">:::</a>
-        <a href="index.html" class="text-accent" title="首頁">首頁</a></li>
-      <li class="breadcrumb-item active" aria-current="page" title="宣導專區">宣導專區</li>
-    </ol>
-  </nav>
-  <hr>
-  <!-- 標題 -->
-  <h1 class="border-width my-5 pl-3 font-weight-normal"><span class="text-primary">宣導</span>專區</h1>
-  <hr>
-  <!-- 按鈕 -->
-  <button class="btn btn-outline-primary" type="button">查看更多</button>
-  <button class="btn btn-primaryLight text-primary" type="button">查看更多</button>
-  <button class="btn btn-outline-accent" type="button">查看更多</button>
-  <button class="btn btn-accentLight text-accent" type="button">查看更多</button>
-  如果使用a標籤，要記得加上 role="button"
-  <hr>
-  <!-- 手風琴 -->
-  <div class="accordion" id="accordionExample">
-    <div class="card">
-      <div class="card-header" id="headingOne">
-        <h2 class="mb-0">
-          <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse"
-            data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-            Collapsible Group Item #1
-          </button>
-        </h2>
-      </div>
+  <!-- 輪播圖 -->
+  <section>
 
-      <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-        <div class="card-body">
-          ...
+  </section>
+  <!-- 最新消息 -->
+  <section>
+    <h2>最新消息</h2>
+    <ul class="row">
+      <li class="col-md-4">
+        <h3 class="text-truncate">高雄市政府推動「示範觀光夜市」認證評核</h3>
+        <p>高雄市政府在推動特色觀光、樂遊高雄之際，為建構優質夜市商圈形象並確保讓本市民眾及外縣市觀光客能玩得開心且消費得放心，今年首次...</p>
+        <div class="d-flex justify-content-between">
+          <p><small>110-10-10</small></p>
+          <button class="btn btn-accentLight text-accent">查看更多</button>
         </div>
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-header" id="headingTwo">
-        <h2 class="mb-0">
-          <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse"
-            data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-            Collapsible Group Item #2
-          </button>
-        </h2>
-      </div>
-      <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-        <div class="card-body">
-          ...
+      </li>
+      <li class="col-md-4">
+        <h3 class="text-truncate">107 年度高雄市餐飲業空氣污染防制設施設置相關管理辦法與自主管理宣導說明會</h3>
+        <p>
+          高雄市一定規模餐飲業管理辦法施行至今已近一年，為確保業者更加了解管理辦法以期提升自主管理及維護效益，將提出目前較常發生未符合...
+        </p>
+        <div class="d-flex justify-content-between">
+          <p><small>110-10-10</small></p>
+          <button class="btn btn-accentLight text-accent">查看更多</button>
         </div>
-      </div>
-    </div>
-    <div class="card">
-      <div class="card-header" id="headingThree">
-        <h2 class="mb-0">
-          <button class="btn btn-link btn-block text-left collapsed" type="button" data-toggle="collapse"
-            data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-            Collapsible Group Item #3
-          </button>
-        </h2>
-      </div>
-      <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-        <div class="card-body">
-          ...
+      </li>
+      <li class="col-md-4">
+        <h3 class="text-truncate">環保署預告列管餐飲業以降低空污排放 高雄市一年前即啟動年減 7.4 噸 PM2.5</h3>
+        <p>環保署今 (107) 年 5 月 17 日預告「餐飲業空氣污染物防制設施管理辦法草案」，預計將於年底擴大列管全國餐飲業；環保局表示，高雄市...</p>
+        <div class="d-flex justify-content-between">
+          <p><small>110-10-10</small></p>
+          <button class="btn btn-accentLight text-accent">查看更多</button>
         </div>
+      </li>
+    </ul>
+  </section>
+  <!-- 宣導主旨 -->
+  <section>
+    <h2>宣導主旨</h2>
+    <div class="row">
+      <div class="col-md-4">
+        <img src="" alt="">
       </div>
+      <div class="col-md-8">
+        <p>餐廳廚房烹煮過程中，若所排放的油煙粒狀物無經過防制設備處理而直接排放，除導致陳情民怨外，亦將對人體健康造成嚴重之危害。例如：長期吸入過多油煙可能會誘發鼻咽癌、口腔癌、膀胱癌、肺癌、胃癌及可能導致慢性阻塞性肺部疾病等。
+        </p>
+        <p>環保局依據「高雄市一定規模餐飲業空氣污染防制管理辦法」及行政院環境保護署預訂定之「餐飲業空氣污染防制設施管理辦法（草案）」進行巡查，有效促使餐飲業者設置污染防制措施，落實污染防制工作，進而達到改善空氣品質之目標。
+        </p>
+        <p>因此特別規劃「高雄市餐飲業空氣污染改善技術服務網頁」，期盼透過網頁提供餐飲業者獲得最佳可行性建議，促使業者進行油煙廢氣污染改善工作，冀達污染物減量及空氣品質改善等具體目標。</p>
+        <button class="btn btn-accentLight text-accent d-flex justify-content-end">查看更多</button>
+      </div>
+     
     </div>
-  </div>
-  <hr>
+  </section>
+
+  <!-- 輔導案例 -->
+  <section>
+    <h2>輔導案例</h2>
+    <!-- Swiper -->
+    <div class="swiper-container">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">毒家口味燒烤</h5>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">沈記食堂</h5>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">碳佐麻里</h5>
+             
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">Slide 4</div>
+      </div>
+      <!-- Add Pagination -->
+      <div class="swiper-pagination"></div>
+      <!-- Add Arrows -->
+      <div class="swiper-button-next"></div>
+      <div class="swiper-button-prev"></div>
+    </div>
+
+  </section>
 </div>
-<!-- 左側欄 -->
-<section class="row">
-  <div class="col-md-3 bg-light position-sticky">
-    <div id="tabL">
-      <a href="#" title="左方連結區" accesskey="L">:::</a>
-    </div>
-    <div class="list-group text-center" id="list-tab" role="tablist">
-      <a class="list-group-item list-group-item-action active" id="list-main-list" data-toggle="list" href="#list-main"
-        role="tab" aria-controls="main" title="活動主旨">活動主旨</a>
-      <a class="list-group-item list-group-item-action" id="list-join-list" data-toggle="list" href="#list-join"
-        role="tab" aria-controls="join" title="參加方式">參加方式</a>
-      <a class="list-group-item list-group-item-action" id="list-welfare-list" data-toggle="list" href="#list-welfare"
-        role="tab" aria-controls="welfare" title="社福宣導">社福宣導</a>
-    </div>
-  </div>
-  <div class="col-md-8">
-    <div class="tab-content" id="nav-tabContent">
-      <!-- 活動主旨 -->
-      <section class="tab-pane mb-5 fade show active" id="list-main" role="tabpanel" aria-labelledby="list-home-list">
-        1
-      </section>
-      <!-- 參加方式 -->
-      <section class="tab-pane mb-5 fade" id="list-join" role="tabpanel" aria-labelledby="list-profile-list">
-        2
-      </section>
-      <!-- 社福宣導 -->
-      <section class="tab-pane mb-5 fade" id="list-welfare" role="tabpanel" aria-labelledby="list-messages-list">
-        3
-      </section>
-    </div>
-  </div>
-</section>
