--- a/app/index.html
+++ b/app/index.html
@@ -7,11 +7,36 @@ current: index
 
 <div class="content container">
   <!-- 輪播圖 -->
-  <section>
-
+  <section class="mb-5">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="..." class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="..." class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="..." class="d-block w-100" alt="...">
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
   </section>
   <!-- 最新消息 -->
-  <section>
+  <section class="mb-5">
     <h2>最新消息</h2>
     <ul class="row">
       <li class="col-md-4">
@@ -43,7 +68,7 @@ current: index
     </ul>
   </section>
   <!-- 宣導主旨 -->
-  <section>
+  <section class="mb-5">
     <h2>宣導主旨</h2>
     <div class="row">
       <div class="col-md-4">
@@ -62,7 +87,7 @@ current: index
   </section>
 
   <!-- 輔導案例 -->
-  <section>
+  <section class="mb-5">
     <h2>輔導案例</h2>
     <!-- Swiper -->
     <div class="swiper-container">
