修正RWD、間距、結構

--- a/app/contact.html
+++ b/app/contact.html
@@ -1,5 +1,5 @@
 ---
-title: 高雄市政府環境保護局 餐飲業空氣污染管制及改善輔導
+title: 聯絡我們
 layout: ./app/layout.ejs
 engine: ejs
 current: contact
@@ -43,9 +43,10 @@ current: contact
         </ol>
       </nav>
       <!-- 標題 -->
-      <h1 class="border-width my-5 font-weight-normal"><span class="text-primary">聯絡</span>我們</h1>
+      <h1 class="mb-3 mt-5 font-weight-normal"><span class="text-primary">聯絡</span>我們</h1>
       <p>若您有任何餐飲油煙相關之問題，歡迎您填寫以下表單，將有專人回覆與說明，謝謝。</p>
-      <form id="form" method="POST">
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScJCxGgeh-8D8WUP5xgd9uJkfmf2bJL2XsfM3jd6k7qm29Gdg/viewform?embedded=true" width="640" height="943" frameborder="0" marginheight="0" marginwidth="0">載入中…</iframe>
+      <!-- <form id="form" method="POST">
         <fieldset>
           <div class="form-group">
             <label for="inputName">姓名<span class="text-accent mb-1">*</span></label>
@@ -80,12 +81,12 @@ current: contact
             id="sendBtn">送出</button>
         </div>
 
-      </form>
+      </form> -->
     </div>
   </section>
 
   <!-- Modal -->
-  <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
+  <!-- <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="ModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
@@ -102,6 +103,6 @@ current: contact
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 </div>
 
