--- a/app/exam.html
+++ b/app/exam.html
@@ -2,7 +2,7 @@
 title: 輔導案例
 layout: ./app/layout.ejs
 engine: ejs
-current: download
+current: exam
 ---
 
 <div class="content container">
@@ -10,9 +10,7 @@ current: download
   <nav aria-label="breadcrumb" class="my-4">
     <ol class="breadcrumb">
       <li class="breadcrumb-item">
-        <a id="accesskey-main" href="#" title="中央主要內容區" accesskey="C"
-          >:::</a
-        >
+        <a id="accesskey-main" href="#" title="中央主要內容區" accesskey="C">:::</a>
         <a href="index.html" class="text-accent" title="首頁">首頁</a>
       </li>
       <li class="breadcrumb-item active" aria-current="page" title="輔導案例">
@@ -22,14 +20,14 @@ current: download
   </nav>
 
   <!-- 標題 -->
-  <h1 class="border-width my-5 pl-3 font-weight-normal">
+  <h1 class="mt-5 mb-3 font-weight-normal">
     <span class="text-primary">輔導</span>案例
   </h1>
 
   <!-- 輔導案例內容 -->
   <section class="mb-5">
     <div class="row">
-      <div class="col-9">
+      <div class="col-12 col-md-8">
         <p>
           由於經濟的發展及時代潮流的進步，一般民眾的飲食習慣也趨向多元化，因此也造就了目前豐富性的飲
           食型態，但相對的餐飲業油煙異味問題也油然而生，特別是在人口密集的都會市區。陳情案件數有逐年
@@ -37,8 +35,6 @@ current: download
           有經過處理就直接排放到空氣中，進而影響到鄰近的空氣品質；如何針對本市餐飲業油煙污染進行管制
           以及降低民眾陳情案件數為當前空氣污染防制工作中急待解決的問題之一。
         </p>
-      </div>
-      <div class="col-9">
         <p>
           因此本計畫針對轄區內屢遭民眾陳情之餐飲業者進行減量輔導協談工作，希望藉由現場實際訪查，提供
           被陳情餐飲業者污染改善建議，同時亦邀請專家學者針對污染改善成效不佳之餐飲業者，依各不同類型
@@ -48,96 +44,57 @@ current: download
         </p>
       </div>
     </div>
-    <p class="mt-3">輔導改善協談會</p>
+    <h2 class="h5">輔導改善協談會</h2>
     <div class="row">
       <div class="col-12 col-md-4">
-        <div class="card">
-          <div class="card-body my-3 py-5">
-            <div class="row justify-content-center">
-              <div class="col-8">
-                <h5 class="card-title font-weight-bold">毒家口味燒烤</h5>
-              </div>
-              <div class="w-100"></div>
-              <div class="col-8">
-                <div class="d-flex justify-content-center align-items-center">
-                <i class="fas fa-clock fa-lg text-primary mr-2"></i>
-                <div class="d-flex flex-column align-items-start">
-                  <small class="card-text">107年11月02日（星期五）</small>
-                  <small class="card-text">下午14時30分</small>
-                </div>
-              </div>
+        <div class="card mb-3 mb-md-0">
+          <div class="card-body py-5">
+            <h3 class="card-title font-weight-bold h5 text-center">毒家口味燒烤</h3>
+            <div class="d-flex justify-content-center align-items-center">
+              <i class="fas fa-clock fa-lg text-primary mr-2"></i>
+              <div class="d-flex flex-column align-items-start">
+                <p class="mb-0"><small class="card-text">107年11月02日（星期五）<br />下午14時30分</small></p>
               </div>
             </div>
           </div>
-          <div class="card-footer p-0">
-            <a
-              href="exam-10711021430.html"
-              class="btn btn-accentLight btn-block rounded-top-0 text-accent text-right stretched-link pr-4"
-              title="進入毒家口味燒烤頁面"
-              role="button"
-            >
+          <div class="card-footer text-right bg-accentLight">
+            <a href="exam-10711021430.html" class="text-accent stretched-link" title="進入毒家口味燒烤頁面" role="button">
               查看更多
             </a>
           </div>
         </div>
       </div>
       <div class="col-12 col-md-4">
-        <div class="card">
-          <div class="card-body my-3 py-5">
-            <div class="row justify-content-center">
-              <div class="col-8">
-                <h5 class="card-title font-weight-bold">沈記食堂</h5>
-              </div>
-              <div class="w-100"></div>
-              <div class="col-8">
-                <div class="d-flex justify-content-center align-items-center">
-                <i class="fas fa-clock fa-lg text-primary mr-2"></i>
-                <div class="d-flex flex-column align-items-start">
-                  <small class="card-text">107年11月02日（星期五）</small>
-                  <small class="card-text">下午13時00分</small>
-                </div>
-              </div>
+        <div class="card mb-3 mb-md-0">
+          <div class="card-body py-5">
+            <h3 class="card-title font-weight-bold h5 text-center">沈記食堂</h3>
+            <div class="d-flex justify-content-center align-items-center">
+              <i class="fas fa-clock fa-lg text-primary mr-2"></i>
+              <div class="d-flex flex-column align-items-start">
+                <p class="mb-0"><small class="card-text">107年11月02日（星期五）<br />下午13時00分</small></p>
               </div>
             </div>
           </div>
-          <div class="card-footer p-0">
-            <a
-              href="exam-10711021300.html"
-              class="btn btn-accentLight btn-block rounded-top-0 text-accent text-right stretched-link pr-4"
-              title="進入毒家口味燒烤頁面"
-              role="button"
-            >
+          <div class="card-footer text-right bg-accentLight">
+            <a href="exam-10711021300.html" class="text-accent stretched-link" title="進入毒家口味燒烤頁面" role="button">
               查看更多
             </a>
           </div>
         </div>
       </div>
       <div class="col-12 col-md-4">
-        <div class="card">
-          <div class="card-body my-3 py-5">
-            <div class="row justify-content-center">
-              <div class="col-8">
-                <h5 class="card-title font-weight-bold">碳佐麻里</h5>
-              </div>
-              <div class="w-100"></div>
-              <div class="col-8">
-                <div class="d-flex justify-content-center align-items-center">
-                <i class="fas fa-clock fa-lg text-primary mr-2"></i>
-                <div class="d-flex flex-column align-items-start">
-                  <small class="card-text">107年11月02日（星期五）</small>
-                  <small class="card-text">上午10時30分</small>
-                </div>
-              </div>
+        <div class="card mb-3 mb-md-0">
+          <div class="card-body py-5">
+            <h3 class="card-title font-weight-bold h5 text-center">碳佐麻里</h3>
+            <div class="d-flex justify-content-center align-items-center">
+              <i class="fas fa-clock fa-lg text-primary mr-2"></i>
+              <div class="d-flex flex-column align-items-start">
+                <p class="mb-0"><small class="card-text">107年11月02日（星期五）<br />上午10時30分</small></p>
               </div>
             </div>
           </div>
-          <div class="card-footer p-0">
-            <a
-              href="exam-10711021030.html"
-              class="btn btn-accentLight btn-block rounded-top-0 text-accent text-right stretched-link pr-4"
-              title="進入毒家口味燒烤頁面"
-              role="button"
-            >
+          <div class="card-footer text-right bg-accentLight">
+            <a href="exam-10711021030.html" class="text-accent stretched-link" title="進入毒家口味燒烤頁面" role="button">
               查看更多
             </a>
           </div>
