--- a/app/message.html
+++ b/app/message.html
@@ -1,5 +1,5 @@
 ---
-title: 高雄市政府環境保護局 餐飲業空氣污染管制及改善輔導
+title: 訊息專區
 layout: ./app/layout.ejs
 engine: ejs
 current: message
@@ -15,33 +15,41 @@ current: message
     </ol>
   </nav>
   <!-- 標題 -->
-  <h1 class="border-width my-5 font-weight-normal"><span class="text-primary">訊息</span>專區</h1>
-  <section class="row">
-    <div class="col-md-4">
-      <div class="bg-light p-4 h-100 d-flex flex-column justify-content-between">
-        <h2 class="h5 font-weight-normal text-center mb-4">最新消息</h2>
-        <ul class="ul-list">
-          <li>餐飲對環保的重要性</li>
-          <li>餐飲業油煙對人體的影響</li>
-        </ul>
-        <a href="news.html" class="btn btn-accentLight btn-block text-accent stretched-link" title="進入最新消息頁面"
-          role="button">
-          查看更多
-        </a>
+  <section class="mb-5">
+    <h1 class="my-5 font-weight-normal"><span class="text-primary">訊息</span>專區</h1>
+    <div class="row">
+      <div class="col-md-4 mb-3 mb-md-0">
+        <div class="bg-light p-4 h-100 d-flex flex-column justify-content-between">
+          <div class="d-flex flex-column align-items-center">
+            <img class="img-fluid ic" src="./assets/images/new.svg" alt="餐飲的影響">
+            <h2 class="h5 font-weight-normal text-center mb-4">最新消息</h2>
+          </div>
+          <ul class="ul-list mb-5">
+            <li>餐飲對環保的重要性</li>
+            <li>餐飲業油煙對人體的影響</li>
+          </ul>
+          <a href="news.html" class="btn btn-accentLight btn-block text-accent stretched-link" title="進入最新消息頁面"
+            role="button">
+            查看更多
+          </a>
+        </div>
       </div>
-    </div>
-    <div class="col-md-4">
-      <div class="bg-light p-4 h-100 d-flex flex-column justify-content-between">
-        <h2 class="h5 font-weight-normal text-center mb-4">相關連結</h2>
-        <ul class="ul-list">
-          <li>油煙相關文章</li>
-          <li>油煙相關研究</li>
-          <li>油煙相關報導</li>
-        </ul>
-        <a href="link.html" class="btn btn-accentLight btn-block text-accent stretched-link" title="進入相關連結頁面"
-          role="button">
-          查看更多
-        </a>
+      <div class="col-md-4">
+        <div class="bg-light p-4 h-100 d-flex flex-column justify-content-between">
+          <div class="d-flex flex-column align-items-center">
+            <img class="img-fluid ic" src="./assets/images/link.svg" alt="餐飲的影響">
+            <h2 class="h5 font-weight-normal text-center mb-4">相關連結</h2>
+          </div>
+          <ul class="ul-list mb-5">
+            <li>油煙相關文章</li>
+            <li>油煙相關研究</li>
+            <li>油煙相關報導</li>
+          </ul>
+          <a href="link.html" class="btn btn-accentLight btn-block text-accent stretched-link" title="進入相關連結頁面"
+            role="button">
+            查看更多
+          </a>
+        </div>
       </div>
     </div>
   </section>
