--- a/app/news-1070413.html
+++ b/app/news-1070413.html
@@ -7,69 +7,68 @@ current: news-1070413.html
 
 <div class="content container">
 
-    <!-- 文章圖片 -->
-    <div class="my-4 bg-news" role="image"></div>
+	<!-- 文章圖片 -->
+	<div class="my-4 bg-news" role="image"></div>
 
-    <!-- 麵包屑 -->
-    <nav aria-label="breadcrumb" class="my-4">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item">
-                <a id="accesskey-main" href="#" title="中央主要內容區" accesskey="C">:::</a>
-                <a href="index.html" class="text-accent" title="首頁">首頁</a>
-            </li>
-            <li class="breadcrumb-item">
-                <a href="message.html" class="text-accent" title="訊息專區">訊息專區</a>
-            </li>
-            <li class="breadcrumb-item">
-                <a href="news.html" class="text-accent" title="最新消息">最新消息</a>
-            </li>
-            <li class="breadcrumb-item active" aria-current="page" title="107 年高雄市優良餐飲業評鑑開跑囉!!">
-                107 年高雄市優良餐飲業評鑑開跑囉!!</li>
-        </ol>
-    </nav>
+	<!-- 麵包屑 -->
+	<nav aria-label="breadcrumb" class="my-4">
+		<ol class="breadcrumb">
+			<li class="breadcrumb-item">
+				<a id="accesskey-main" href="#" title="中央主要內容區" accesskey="C">:::</a>
+				<a href="index.html" class="text-accent" title="首頁">首頁</a>
+			</li>
+			<li class="breadcrumb-item">
+				<a href="message.html" class="text-accent" title="訊息專區">訊息專區</a>
+			</li>
+			<li class="breadcrumb-item">
+				<a href="news.html" class="text-accent" title="最新消息">最新消息</a>
+			</li>
+			<li class="breadcrumb-item active" aria-current="page" title="107 年高雄市優良餐飲業評鑑開跑囉!!">
+				107 年高雄市優良餐飲業評鑑開跑囉!!</li>
+		</ol>
+	</nav>
 
-    <section>
-        <!-- 標題 -->
-        <h1 class="border-width mt-5">107 年高雄市優良餐飲業評鑑開跑囉!!</h1>
-        <ul class="list-unstyled">
-            <li>
-                <small class="text-primary">
-                    <i class="fas fa-calendar-day"></i>
-                    107-04-13
-                </small>
-            </li>
-            <li>
-                <small class="text-primary">
-                    <i class="fas fa-phone"></i>
-                    業者若對於輔導內容有疑問，歡迎洽詢：07-7152660#515 鐘小姐
-                </small>
-            </li>
-        </ul>
+	<section>
+		<!-- 標題 -->
+		<h1 class="mt-5 mb-3 font-weight-normal">107 年高雄市優良餐飲業評鑑開跑囉!!</h1>
+		<ul class="list-unstyled">
+			<li>
+				<small class="text-primary">
+					<i class="fas fa-calendar-day"></i>
+					107-04-13
+				</small>
+			</li>
+			<li>
+				<small class="text-primary">
+					<i class="fas fa-phone"></i>
+					業者若對於輔導內容有疑問，歡迎洽詢：07-7152660#515 鐘小姐
+				</small>
+			</li>
+		</ul>
 
-        <!-- 主要內容 -->
-        <div class="row my-5">
-            <!-- 消息內文 -->
-            <article class="col-md-8">
-                <p>
-                    107 年度高雄市一定規模餐飲業輔導作業於 3 月 1 日起正式啟動，目的為使業者更加了解「高雄市一定規模餐飲業空氣污染防制設施設置管理辦法 (施行日期
-                    106.10.01)」之立法精神並加速各場所符合法規規範，主要對象為設立於高雄市且符合「高雄市自治條例」與「高雄市一定規模餐飲業空氣污染防制設施設置管理辦法」中一定規模餐飲業者，均派員至現場輔導並記錄各業者油煙污染防制設施設置之情形與建置油煙各單元處理設施維護紀錄表。
-                </p>
-                <div class="row justify-content-start align-content-center my-5">
-                    <div class="col-12 col-md-4 mb-3 mb-md-3">
-                        <img class="img-fluid" src="https://air.ksepb.gov.tw/cook/images/news/107041301.png"
-                            alt="輔導流程" />
-                    </div>
-                    <div class="col-12 col-md-4 mb-3 mb-md-3">
-                        <img class="img-fluid" src="https://air.ksepb.gov.tw/cook/images/news/107041302.png"
-                            alt="廚房內爐具紀錄、油煙污染前處理設備與管末處理設備進行拍照記錄與討論" />
-                    </div>
-                    <div class="col-12 col-md-4 mb-3 mb-md-3">
-                        <img class="img-fluid" src="https://air.ksepb.gov.tw/cook/images/news/107041303.png"
-                            alt="油煙各單元處理設施維護紀錄表填表與說明、清潔頻率紀錄說明、保存年限說明" />
-                    </div>
-                </div>
-            </article>
-        </div>
-    </section>
+		<!-- 主要內容 -->
+		<div class="row my-5">
+			<!-- 消息內文 -->
+			<article class="col-md-8">
+				<p>
+					107 年度高雄市一定規模餐飲業輔導作業於 3 月 1 日起正式啟動，目的為使業者更加了解「高雄市一定規模餐飲業空氣污染防制設施設置管理辦法 (施行日期
+					106.10.01)」之立法精神並加速各場所符合法規規範，主要對象為設立於高雄市且符合「高雄市自治條例」與「高雄市一定規模餐飲業空氣污染防制設施設置管理辦法」中一定規模餐飲業者，均派員至現場輔導並記錄各業者油煙污染防制設施設置之情形與建置油煙各單元處理設施維護紀錄表。
+				</p>
+				<div class="row justify-content-start align-content-center my-5">
+					<div class="col-12 col-md-4 mb-3">
+						<img class="img-fluid" src="https://air.ksepb.gov.tw/cook/images/news/107041301.png" alt="輔導流程" />
+					</div>
+					<div class="col-12 col-md-4 mb-3">
+						<img class="img-fluid" src="https://air.ksepb.gov.tw/cook/images/news/107041302.png"
+							alt="廚房內爐具紀錄、油煙污染前處理設備與管末處理設備進行拍照記錄與討論" />
+					</div>
+					<div class="col-12 col-md-4 mb-3">
+						<img class="img-fluid" src="https://air.ksepb.gov.tw/cook/images/news/107041303.png"
+							alt="油煙各單元處理設施維護紀錄表填表與說明、清潔頻率紀錄說明、保存年限說明" />
+					</div>
+				</div>
+			</article>
+		</div>
+	</section>
 
 </div>
