--- a/app/news-1070523.html
+++ b/app/news-1070523.html
@@ -30,7 +30,7 @@ current: news-1070523.html
 
 	<section>
 		<!-- 標題 -->
-		<h1 class="border-width mt-5">環保署預告列管餐飲業以降低空污排放 高雄市一年前即啟動年減 7.4 噸 PM2.5</h1>
+		<h1 class="mt-5 mb-3 font-weight-normal">環保署預告列管餐飲業以降低空污排放 高雄市一年前即啟動年減 7.4 噸 PM2.5</h1>
 		<ul class="list-unstyled">
 			<li>
 				<small class="text-primary">
@@ -82,15 +82,15 @@ current: news-1070523.html
 					環保局在此呼籲所有餐飲業者，加強空氣污染防制設備設置與維護，不僅可以營造健康無油煙的餐飲環境，更能減少油煙對業者、消費者及民眾的健康危害，其重要性不言可喻。
 				</p>
 				<div class="row justify-content-start align-content-center my-5">
-					<div class="col-12 col-md-4 mb-3 mb-md-3">
+					<div class="col-12 col-md-4 mb-3">
 						<img class="img-fluid" src="https://air.ksepb.gov.tw/cook/images/news/107051901.png"
 							alt="環保局人員至現場確認防制設備狀況" />
 					</div>
-					<div class="col-12 col-md-4 mb-3 mb-md-3">
+					<div class="col-12 col-md-4 mb-3">
 						<img class="img-fluid" src="https://air.ksepb.gov.tw/cook/images/news/107051902.png"
 							alt="邀請專家學者現場輔導燒烤業者改善" />
 					</div>
-					<div class="col-12 col-md-4 mb-3 mb-md-3">
+					<div class="col-12 col-md-4 mb-3">
 						<img class="img-fluid" src="https://air.ksepb.gov.tw/cook/images/news/107051903.png"
 							alt="邀請專家學者現場輔導燒烤業者改善" />
 					</div>
