--- a/app/news-1080827.html
+++ b/app/news-1080827.html
@@ -29,7 +29,7 @@ current: news-1080827.html
 
 	<section>
 		<!-- 標題 -->
-		<h1 class="border-width mt-5">高雄市政府推動「示範觀光夜市」認證評核</h1>
+		<h1 class="mt-5 mb-3 font-weight-normal">高雄市政府推動「示範觀光夜市」認證評核</h1>
 		<ul class="list-unstyled">
 			<li>
 				<small class="text-primary">
@@ -47,15 +47,15 @@ current: news-1080827.html
 			<li>
 				<small class="text-accent">
 					<i class="fas fa-link"></i>
-						<a href="https://khh.travel/zh-tw/board-and-lodging/night-market" target="_blank" title="另開新視窗，前往高雄市政府觀光局網站"
-							class="text-accent"> 高雄市政府觀光局 - 觀光夜市稽查結果</a>
+					<a href="https://khh.travel/zh-tw/board-and-lodging/night-market" target="_blank" title="另開新視窗，前往高雄市政府觀光局網站"
+						class="text-accent"> 高雄市政府觀光局 - 觀光夜市稽查結果</a>
 				</small>
 			</li>
 			<li>
 				<small class="text-accent">
 					<i class="fas fa-link"></i>
-						<a href="https://khd.kcg.gov.tw/tw/index.php" target="_blank" title="另開新視窗，前往衛生局網站"
-							class="text-accent">衛生局食品衛生專區 - 觀光夜市稽查結果</a>
+					<a href="https://khd.kcg.gov.tw/tw/index.php" target="_blank" title="另開新視窗，前往衛生局網站"
+						class="text-accent">衛生局食品衛生專區 - 觀光夜市稽查結果</a>
 				</small>
 			</li>
 		</ul>
@@ -86,27 +86,27 @@ current: news-1080827.html
 						月)</strong>，在此期間相關局處亦會持續定期稽查，另活動現場 2 夜市管理委員會亦展示夜市特色美食及提供好康優惠。
 				</p>
 				<div class="row justify-content-start align-content-center my-5">
-					<div class="col-12 col-md-4 mb-3 mb-md-3">
+					<div class="col-12 col-md-4 mb-3">
 						<img class="img-fluid" src="https://air.ksepb.gov.tw/cook/images/news/108082701.png"
 							alt="108 年 08 月 27 日的最新消息的第一張圖片" />
 					</div>
-					<div class="col-12 col-md-4 mb-3 mb-md-3">
+					<div class="col-12 col-md-4 mb-3">
 						<img class="img-fluid" src="https://air.ksepb.gov.tw/cook/images/news/108082702.png"
 							alt="108 年 08 月 27 日的最新消息的第二張圖片" />
 					</div>
-					<div class="col-12 col-md-4 mb-3 mb-md-3">
+					<div class="col-12 col-md-4 mb-3">
 						<img class="img-fluid" src="https://air.ksepb.gov.tw/cook/images/news/108082703.png"
 							alt="108 年 08 月 27 日的最新消息的第三張圖片" />
 					</div>
-					<div class="col-12 col-md-4 mb-3 mb-md-3">
+					<div class="col-12 col-md-4 mb-3">
 						<img class="img-fluid" src="https://air.ksepb.gov.tw/cook/images/news/108082704.png"
 							alt="108 年 08 月 27 日的最新消息的第四張圖片" />
 					</div>
-					<div class="col-12 col-md-4 mb-3 mb-md-3">
+					<div class="col-12 col-md-4 mb-3">
 						<img class="img-fluid" src="https://air.ksepb.gov.tw/cook/images/news/108082705.png"
 							alt="108 年 08 月 27 日的最新消息的第五張圖片" />
 					</div>
-					<div class="col-12 col-md-4 mb-3 mb-md-3">
+					<div class="col-12 col-md-4 mb-3">
 						<img class="img-fluid" src="https://air.ksepb.gov.tw/cook/images/news/108082706.png"
 							alt="108 年 08 月 27 日的最新消息的第六張圖片" />
 					</div>
