--- a/app/sitemap.html
+++ b/app/sitemap.html
@@ -18,7 +18,7 @@ current: sitemap
 
   <section>
     <!-- 標題 -->
-    <h1 class="border-width my-5 pl-3 font-weight-normal"><span class="text-primary">網站</span>導覽</h1>
+    <h1 class="mt-5 mb-3 font-weight-normal"><span class="text-primary">網站</span>導覽</h1>
 
     <!-- 主要內容 -->
     <p>本網站依無障礙網頁設計原則而建置，網站的主要樣版內容分為四個大區塊：</p>
