--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@ current: index
 
 <div class="content container">
   <!-- 輪播圖 -->
-  <section class="mb-5">
+  <section class="mb-6">
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -16,13 +16,19 @@ current: index
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="..." class="d-block w-100" alt="...">
+          <img
+            src="https://images.unsplash.com/photo-1586999768265-24af89630739?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60"
+            class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="...">
+          <img
+            src="https://images.unsplash.com/photo-1586999768265-24af89630739?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60"
+            class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="...">
+          <img
+            src="https://images.unsplash.com/photo-1586999768265-24af89630739?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60"
+            class="d-block w-100" alt="...">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -36,43 +42,45 @@ current: index
     </div>
   </section>
   <!-- 最新消息 -->
-  <section class="mb-5">
-    <h2>最新消息</h2>
-    <ul class="row">
-      <li class="col-md-4">
-        <h3 class="text-truncate">高雄市政府推動「示範觀光夜市」認證評核</h3>
+  <section class="mb-6">
+    <h2 class="mb-3">最新消息<img src="./assets/images/new.svg" width="35" class="ml-2"></h2>
+    <ul class="row list-unstyled">
+      <li class="col-md-4 mb-3 mb-md-0">
+        <h3 class="text-truncate h5">高雄市政府推動「示範觀光夜市」認證評核</h3>
         <p>高雄市政府在推動特色觀光、樂遊高雄之際，為建構優質夜市商圈形象並確保讓本市民眾及外縣市觀光客能玩得開心且消費得放心，今年首次...</p>
         <div class="d-flex justify-content-between">
-          <p><small>110-10-10</small></p>
-          <button class="btn btn-accentLight text-accent">查看更多</button>
+          <p><small>108-08-27</small></p>
+          <a href="./news-1080827.html" class="btn btn-accentLight text-accent" role="button" title="查看更多">查看更多</a>
         </div>
       </li>
-      <li class="col-md-4">
-        <h3 class="text-truncate">107 年度高雄市餐飲業空氣污染防制設施設置相關管理辦法與自主管理宣導說明會</h3>
+      <li class="col-md-4 mb-3 mb-md-0">
+        <h3 class="text-truncate h5">107 年度高雄市餐飲業空氣污染防制設施設置相關管理辦法與自主管理宣導說明會</h3>
         <p>
           高雄市一定規模餐飲業管理辦法施行至今已近一年，為確保業者更加了解管理辦法以期提升自主管理及維護效益，將提出目前較常發生未符合...
         </p>
         <div class="d-flex justify-content-between">
-          <p><small>110-10-10</small></p>
-          <button class="btn btn-accentLight text-accent">查看更多</button>
+          <p><small>107-11-12</small></p>
+          <a href="./news-1071112.html" class="btn btn-accentLight text-accent" role="button" title="查看更多">查看更多</a>
         </div>
       </li>
       <li class="col-md-4">
-        <h3 class="text-truncate">環保署預告列管餐飲業以降低空污排放 高雄市一年前即啟動年減 7.4 噸 PM2.5</h3>
+        <h3 class="text-truncate h5">環保署預告列管餐飲業以降低空污排放 高雄市一年前即啟動年減 7.4 噸 PM2.5</h3>
         <p>環保署今 (107) 年 5 月 17 日預告「餐飲業空氣污染物防制設施管理辦法草案」，預計將於年底擴大列管全國餐飲業；環保局表示，高雄市...</p>
         <div class="d-flex justify-content-between">
-          <p><small>110-10-10</small></p>
-          <button class="btn btn-accentLight text-accent">查看更多</button>
+          <p><small>107-05-23</small></p>
+          <a href="./news-1070523.html" class="btn btn-accentLight text-accent" role="button" title="查看更多">查看更多</a>
         </div>
       </li>
     </ul>
   </section>
   <!-- 宣導主旨 -->
-  <section class="mb-5">
-    <h2>宣導主旨</h2>
+  <section class="mb-6">
+    <h2 class="mb-3">宣導主旨<img src="./assets/images/appreciation.svg" width="35" class="ml-2"></h2>
     <div class="row">
       <div class="col-md-4">
-        <img src="" alt="">
+        <img
+          src="https://images.unsplash.com/photo-1533626904905-cc52fd99285e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60"
+          alt="宣導主旨" class="img-fluid mb-3 mb-md-0">
       </div>
       <div class="col-md-8">
         <p>餐廳廚房烹煮過程中，若所排放的油煙粒狀物無經過防制設備處理而直接排放，除導致陳情民怨外，亦將對人體健康造成嚴重之危害。例如：長期吸入過多油煙可能會誘發鼻咽癌、口腔癌、膀胱癌、肺癌、胃癌及可能導致慢性阻塞性肺部疾病等。
@@ -80,51 +88,41 @@ current: index
         <p>環保局依據「高雄市一定規模餐飲業空氣污染防制管理辦法」及行政院環境保護署預訂定之「餐飲業空氣污染防制設施管理辦法（草案）」進行巡查，有效促使餐飲業者設置污染防制措施，落實污染防制工作，進而達到改善空氣品質之目標。
         </p>
         <p>因此特別規劃「高雄市餐飲業空氣污染改善技術服務網頁」，期盼透過網頁提供餐飲業者獲得最佳可行性建議，促使業者進行油煙廢氣污染改善工作，冀達污染物減量及空氣品質改善等具體目標。</p>
-        <button class="btn btn-accentLight text-accent d-flex justify-content-end">查看更多</button>
+        <a href="./props.html" class="btn btn-accentLight text-accent btn-block btn-md-block" role="button"
+          title="查看更多">查看更多</a>
       </div>
-     
+
     </div>
   </section>
 
   <!-- 輔導案例 -->
-  <section class="mb-5">
-    <h2>輔導案例</h2>
+  <section class="mb-6">
+    <h2 class="mb-3">輔導案例<img src="./assets/images/premium.svg" width="35" class="ml-2"></h2>
     <!-- Swiper -->
     <div class="swiper-container">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">毒家口味燒烤</h5>
-            </div>
+          <div class="card py-3 d border border-accent">
+            <h5 class="card-title mb-0 text-center"><a href="./exam-10711021430.html" class="text-accent">毒家口味燒烤</a>
+            </h5>
           </div>
         </div>
         <div class="swiper-slide">
-          <div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">沈記食堂</h5>
-            </div>
+          <div class="card py-3 border border-accent">
+            <h5 class="card-title mb-0 text-center"><a href="./exam-10711021300.html" class="text-accent">沈記食堂</a></h5>
           </div>
         </div>
         <div class="swiper-slide">
-          <div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">碳佐麻里</h5>
-             
-            </div>
+          <div class="card py-3 border border-accent">
+            <h5 class="card-title mb-0 text-center"><a href="./exam-10711021030.html" class="text-accent">碳佐麻里</a></h5>
           </div>
         </div>
-        <div class="swiper-slide">Slide 4</div>
       </div>
-      <!-- Add Pagination -->
-      <div class="swiper-pagination"></div>
-      <!-- Add Arrows -->
-      <div class="swiper-button-next"></div>
-      <div class="swiper-button-prev"></div>
     </div>
-
+    <!-- Add Pagination -->
+    <div class="swiper-pagination"></div>
+    <!-- Add Arrows -->
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
   </section>
 </div>
