--- a/app/exam.html
+++ b/app/exam.html
@@ -35,7 +35,7 @@ current: exam
           有經過處理就直接排放到空氣中，進而影響到鄰近的空氣品質；如何針對本市餐飲業油煙污染進行管制
           以及降低民眾陳情案件數為當前空氣污染防制工作中急待解決的問題之一。
         </p>
-        <p>
+        <p class="mb-4">
           因此本計畫針對轄區內屢遭民眾陳情之餐飲業者進行減量輔導協談工作，希望藉由現場實際訪查，提供
           被陳情餐飲業者污染改善建議，同時亦邀請專家學者針對污染改善成效不佳之餐飲業者，依各不同類型
           之污染狀況提出有效之改善方案，協助餐飲業者進行改善工作，同時追蹤歷年所輔導之餐飲業者污染改
@@ -49,7 +49,7 @@ current: exam
       <div class="col-12 col-md-4">
         <div class="card mb-3 mb-md-0">
           <div class="card-body py-5">
-            <h3 class="card-title font-weight-bold h5 text-center">毒家口味燒烤</h3>
+            <h3 class="card-title font-weight-normal h5 text-center">毒家口味燒烤</h3>
             <div class="d-flex justify-content-center align-items-center">
               <i class="fas fa-clock fa-lg text-primary mr-2"></i>
               <div class="d-flex flex-column align-items-start">
@@ -67,7 +67,7 @@ current: exam
       <div class="col-12 col-md-4">
         <div class="card mb-3 mb-md-0">
           <div class="card-body py-5">
-            <h3 class="card-title font-weight-bold h5 text-center">沈記食堂</h3>
+            <h3 class="card-title font-weight-normal h5 text-center">沈記食堂</h3>
             <div class="d-flex justify-content-center align-items-center">
               <i class="fas fa-clock fa-lg text-primary mr-2"></i>
               <div class="d-flex flex-column align-items-start">
@@ -85,7 +85,7 @@ current: exam
       <div class="col-12 col-md-4">
         <div class="card mb-3 mb-md-0">
           <div class="card-body py-5">
-            <h3 class="card-title font-weight-bold h5 text-center">碳佐麻里</h3>
+            <h3 class="card-title font-weight-normal h5 text-center">碳佐麻里</h3>
             <div class="d-flex justify-content-center align-items-center">
               <i class="fas fa-clock fa-lg text-primary mr-2"></i>
               <div class="d-flex flex-column align-items-start">
