修正宣導專區&RWD

--- a/app/props-laws.html
+++ b/app/props-laws.html
@@ -7,8 +7,8 @@ current: props-laws
 
 <div class="content container-fluid">
   <section class="row">
-    <div class="col-md-3 bg-light position-sticky">
-      <div class="list-group text-center" id="list-tab" role="tablist">
+    <div class="col-md-3 bg-light">
+      <div class="list-group mt-4 position-fixed" id="list-tab" role="tablist">
         <a class="list-group-item list-group-item-action active" id="props-airPollution-list" data-toggle="list"
           href="#props-airPollution" role="tab" aria-controls="空氣污染防制法" title="空氣污染防制法">空氣污染防制法</a>
         <a class="list-group-item list-group-item-action" id="props-airPollutionGuidelines-list" data-toggle="list"
@@ -22,7 +22,7 @@ current: props-laws
           role="tab" aria-controls="噪音管制標準" title="噪音管制標準">噪音管制標準</a>
         <a class="list-group-item list-group-item-action" id="props-management-list" data-toggle="list"
           href="#props-management" role="tab" aria-controls="高雄市一定規模餐飲業 空氣污染防制設施設置管理辦法"
-          title="高雄市一定規模餐飲業 空氣污染防制設施設置管理辦法">高雄市一定規模餐飲業 空氣污染防制設施設置管理辦法</a>
+          title="高雄市一定規模餐飲業 空氣污染防制設施設置管理辦法">高雄市一定規模餐飲業<br>空氣污染防制設施設置管理辦法</a>
         <a class="list-group-item list-group-item-action" id="props-draft-list" data-toggle="list" href="#props-draft"
           role="tab" aria-controls="環保署草案內容" title="環保署草案內容">環保署草案內容</a>
       </div>
@@ -496,7 +496,7 @@ current: props-laws
             高雄市一定規模餐飲業<br />空氣污染防制設施設置管理辦法
           </h1>
           <div class="accordion" id="equipment6">
-            <a class="text-accent" target="_blank" href="https://outlaw.kcg.gov.tw/" title="(另開新視窗)">法規連結</a>
+            <a class="text-accent my-2 d-block" target="_blank" href="https://outlaw.kcg.gov.tw/" title="(另開新視窗)">法規連結</a>
             <div class="card">
               <div class="card-header" id="headingOne">
                 <h2 class="mb-0">
