--- a/app/props-influence.html
+++ b/app/props-influence.html
@@ -7,8 +7,8 @@ current: props-influence
 
 <div class="content container-fluid">
   <section class="row">
-    <div class="col-md-3 bg-light position-sticky">
-      <div class="list-group text-center" id="list-tab" role="tablist">
+    <div class="col-md-3 bg-light">
+      <div class="list-group mt-4 position-fixed" id="list-tab" role="tablist">
         <a
           class="list-group-item list-group-item-action active"
           id="props-important-list"
