--- a/app/props-prevent.html
+++ b/app/props-prevent.html
@@ -7,8 +7,8 @@ current: props-prevent
 
 <div class="content container-fluid">
   <section class="row">
-    <div class="col-md-3 bg-light position-sticky">
-      <div class="list-group text-center" id="list-tab" role="tablist">
+    <div class="col-md-3 bg-light">
+      <div class="list-group mt-4 position-fixed" id="list-tab" role="tablist">
         <a class="list-group-item list-group-item-action active" id="props-countermeasure-list" data-toggle="list"
           href="#props-countermeasure" role="tab" aria-controls="烹飪者的防範對策" title="烹飪者的防範對策">烹飪者的防範對策</a>
         <a class="list-group-item list-group-item-action" id="props-technology-list" data-toggle="list"
@@ -122,7 +122,7 @@ current: props-prevent
                       <img src="./assets/images/baffle.jpg" class="mb-3 mb-lg-0 mr-md-3 img-fluid" alt="集氣罩" />
                     </div>
                     <div class="col-12 col-lg-9">
-                      <h3>集氣罩</h3>
+                      <h3 class="h6">集氣罩</h3>
                       <ol class="pl-4">
                         <li>
                           集氣設施之廢氣捕集速度應介於每秒1.0 至2.5公尺。
@@ -156,7 +156,7 @@ current: props-prevent
                       <img src="./assets/images/gasHood.jpg" class="mb-3 mb-lg-0 mr-md-3 img-fluid" alt="擋板式 / 濾材裝置" />
                     </div>
                     <div class="col-12 col-lg-9">
-                      <h3>擋板式 / 濾材裝置</h3>
+                      <h3 class="h6">擋板式 / 濾材裝置</h3>
                       <ul class="list-unstyled">
                         <li>
                           <span class="font-weight-bold">設備原理</span> : 利用慣性衝擊或濾材(濾網、吸油棉等)、直接攔截去除油
@@ -189,7 +189,7 @@ current: props-prevent
                       <img src="./assets/images/Washable hood.png" class="mb-3 mb-lg-0 mr-md-3 img-fluid" alt="水洗式煙罩" />
                     </div>
                     <div class="col-12 col-lg-9">
-                      <h3>水洗式煙罩</h3>
+                      <h3 class="h6">水洗式煙罩</h3>
                       <ul class="list-unstyled">
                         <li>
                           <span class="font-weight-bold">設備原理</span> : 利用水霧去除油煙。
@@ -236,7 +236,7 @@ current: props-prevent
                         alt="靜電集塵器" />
                     </div>
                     <div class="col-12 col-lg-9">
-                      <h3>靜電集塵器</h3>
+                      <h3 class="h6">靜電集塵器</h3>
                       <ul class="list-unstyled">
                         <li>
                           <span class="font-weight-bold">設備原理</span> : 利用高壓電極放電使油霧帶電後被電極板吸收而達到淨化功能。
@@ -269,7 +269,7 @@ current: props-prevent
                         alt="濕式洗滌設備" />
                     </div>
                     <div class="col-12 col-lg-9">
-                      <h3>濕式洗滌設備</h3>
+                      <h3 class="h6">濕式洗滌設備</h3>
                       <ul class="list-unstyled">
                         <li>
                           <span class="font-weight-bold">設備原理</span> : 利用吸收原理，將油煙導入裝置，透過水霧吸收油煙及臭味而達到淨化功能。
@@ -302,7 +302,7 @@ current: props-prevent
                         alt="活性碳吸附" />
                     </div>
                     <div class="col-12 col-lg-9">
-                      <h3>活性碳吸附</h3>
+                      <h3 class="h6">活性碳吸附</h3>
                       <ul class="list-unstyled">
                         <li>
                           <span class="font-weight-bold">設備原理</span> :
@@ -336,7 +336,7 @@ current: props-prevent
                         alt="紫外光-臭氧設備" />
                     </div>
                     <div class="col-12 col-lg-9">
-                      <h3>紫外光-臭氧設備</h3>
+                      <h3 class="h6">紫外光-臭氧設備</h3>
                       <ul class="list-unstyled">
                         <li>
                           <span class="font-weight-bold">設備原理</span> : 於風管前段裝置紫外光燈管，利用氧化反應生成臭氧及氧自由基來氧化分解油滴，達到去除油煙及異味。
@@ -382,7 +382,7 @@ current: props-prevent
                       <img src="./assets/images/windmill.jpg" class="mb-3 mb-lg-0 mr-md-3 img-fluid" alt="風車" />
                     </div>
                     <div class="col-12 col-lg-9">
-                      <h3>風車</h3>
+                      <h3 class="h6">風車</h3>
                       <ol class="pl-4">
                         <li>
                           風管中之排氣速度應每秒7.5公尺以上。
@@ -416,7 +416,7 @@ current: props-prevent
                       <img src="./assets/images/Exhaustion hole.jpg" class="mb-3 mb-lg-0 mr-md-3 img-fluid" alt="排氣口" />
                     </div>
                     <div class="col-12 col-lg-9">
-                      <h3>排氣口</h3>
+                      <h3 class="h6">排氣口</h3>
                       <ol class="pl-4">
                         <li>
                           廢氣排放口不得接至下水道或溝渠中。
