--- a/app/contact.html
+++ b/app/contact.html
@@ -8,24 +8,21 @@ current: contact
 <div class="content container-fluid">
   <!-- 左側欄 -->
   <section class="row flex-column-reverse flex-md-row">
-    <div class="col-md-3 bg-light position-sticky d-flex flex-column justify-content-center align-items-center">
-      <div class="d-flex flex-md-column">
-        <div>
+    <div class="col-md-3 bg-light">
+      <div class="mt-4 position-fixed">
+        <div class="mb-5">
           <div id="tabL">
             <a href="#" title="左方連結區" accesskey="L">:::</a>
           </div>
           <h2 class="h5 mb-3">
-            <i class="fas fa-phone fa-flip-horizontal text-primary mr-3"></i>
             聯絡方式
           </h2>
           <h6 class="mb-3 font-weight-normal">高雄市政府環保局空噪科</h6>
           <h6 class="mb-3 font-weight-normal"><strong>電話</strong><br> 07-7361600</h6>
           <h6 class="font-weight-normal"><strong>公害檢舉專線</strong><br> 0800-066666</h6>
-          <hr class="d-none d-md-block">
         </div>
         <div>
           <h2 class="h5 mb-3">
-            <i class="fas fa-link mr-3 text-primary"></i>
             聯絡連結
           </h2>
           <a href="" target="_blank" class="text-accent" title="公害陳情系統網路受理系統(另開新視窗)">公害陳情系統網路受理系統</a>
