修改訊息專區

--- a/app/message.html
+++ b/app/message.html
@@ -25,8 +25,8 @@ current: message
             <h2 class="h5 font-weight-normal text-center mb-4">最新消息</h2>
           </div>
           <ul class="ul-list mb-5">
-            <li>餐飲對環保的重要性</li>
-            <li>餐飲業油煙對人體的影響</li>
+            <li>油煙相關訊息</li>
+            <li>油煙相關報導</li>
           </ul>
           <a href="news.html" class="btn btn-accentLight btn-block text-accent stretched-link" title="進入最新消息頁面"
             role="button">
@@ -43,7 +43,6 @@ current: message
           <ul class="ul-list mb-5">
             <li>油煙相關文章</li>
             <li>油煙相關研究</li>
-            <li>油煙相關報導</li>
           </ul>
           <a href="link.html" class="btn btn-accentLight btn-block text-accent stretched-link" title="進入相關連結頁面"
             role="button">
