--- a/app/news-1070413.html
+++ b/app/news-1070413.html
@@ -56,14 +56,14 @@ current: news-1070413.html
 				</p>
 				<div class="row justify-content-start align-content-center my-5">
 					<div class="col-12 col-md-4 mb-3">
-						<img class="img-fluid" src="https://air.ksepb.gov.tw/cook/images/news/107041301.png" alt="輔導流程" />
+						<img class="img-fluid" src="./assets/images/news_107/news_1070413_1.png" alt="輔導流程" />
 					</div>
 					<div class="col-12 col-md-4 mb-3">
-						<img class="img-fluid" src="https://air.ksepb.gov.tw/cook/images/news/107041302.png"
+						<img class="img-fluid" src="./assets/images/news_107/news_1070413_2.png"
 							alt="廚房內爐具紀錄、油煙污染前處理設備與管末處理設備進行拍照記錄與討論" />
 					</div>
 					<div class="col-12 col-md-4 mb-3">
-						<img class="img-fluid" src="https://air.ksepb.gov.tw/cook/images/news/107041303.png"
+						<img class="img-fluid" src="./assets/images/news_107/news_1070413_3.png"
 							alt="油煙各單元處理設施維護紀錄表填表與說明、清潔頻率紀錄說明、保存年限說明" />
 					</div>
 				</div>
