--- a/app/news-1070523.html
+++ b/app/news-1070523.html
@@ -83,15 +83,15 @@ current: news-1070523.html
 				</p>
 				<div class="row justify-content-start align-content-center my-5">
 					<div class="col-12 col-md-4 mb-3">
-						<img class="img-fluid" src="https://air.ksepb.gov.tw/cook/images/news/107051901.png"
+						<img class="img-fluid" src="./assets/images/news_107/news_1070523_1.png"
 							alt="環保局人員至現場確認防制設備狀況" />
 					</div>
 					<div class="col-12 col-md-4 mb-3">
-						<img class="img-fluid" src="https://air.ksepb.gov.tw/cook/images/news/107051902.png"
+						<img class="img-fluid" src="./assets/images/news_107/news_1070523_2.png"
 							alt="邀請專家學者現場輔導燒烤業者改善" />
 					</div>
 					<div class="col-12 col-md-4 mb-3">
-						<img class="img-fluid" src="https://air.ksepb.gov.tw/cook/images/news/107051903.png"
+						<img class="img-fluid" src="./assets/images/news_107/news_1070523_3.png"
 							alt="邀請專家學者現場輔導燒烤業者改善" />
 					</div>
 				</div>
