--- a/app/news-1080827.html
+++ b/app/news-1080827.html
@@ -87,27 +87,27 @@ current: news-1080827.html
 				</p>
 				<div class="row justify-content-start align-content-center my-5">
 					<div class="col-12 col-md-4 mb-3">
-						<img class="img-fluid" src="https://air.ksepb.gov.tw/cook/images/news/108082701.png"
+						<img class="img-fluid" src="./assets/images/news_108/news_1080827_1.png"
 							alt="108 年 08 月 27 日的最新消息的第一張圖片" />
 					</div>
 					<div class="col-12 col-md-4 mb-3">
-						<img class="img-fluid" src="https://air.ksepb.gov.tw/cook/images/news/108082702.png"
+						<img class="img-fluid" src="./assets/images/news_108/news_1080827_2.png"
 							alt="108 年 08 月 27 日的最新消息的第二張圖片" />
 					</div>
 					<div class="col-12 col-md-4 mb-3">
-						<img class="img-fluid" src="https://air.ksepb.gov.tw/cook/images/news/108082703.png"
+						<img class="img-fluid" src="./assets/images/news_108/news_1080827_3.png"
 							alt="108 年 08 月 27 日的最新消息的第三張圖片" />
 					</div>
 					<div class="col-12 col-md-4 mb-3">
-						<img class="img-fluid" src="https://air.ksepb.gov.tw/cook/images/news/108082704.png"
+						<img class="img-fluid" src="./assets/images/news_108/news_1080827_4.png"
 							alt="108 年 08 月 27 日的最新消息的第四張圖片" />
 					</div>
 					<div class="col-12 col-md-4 mb-3">
-						<img class="img-fluid" src="https://air.ksepb.gov.tw/cook/images/news/108082705.png"
+						<img class="img-fluid" src="./assets/images/news_108/news_1080827_5.png"
 							alt="108 年 08 月 27 日的最新消息的第五張圖片" />
 					</div>
 					<div class="col-12 col-md-4 mb-3">
-						<img class="img-fluid" src="https://air.ksepb.gov.tw/cook/images/news/108082706.png"
+						<img class="img-fluid" src="./assets/images/news_108/news_1080827_6.png"
 							alt="108 年 08 月 27 日的最新消息的第六張圖片" />
 					</div>
 				</div>
