--- a/app/news-1071112.html
+++ b/app/news-1071112.html
@@ -62,15 +62,15 @@ current: news-1071112.html
 				<p><strong>高雄市餐飲業空氣污染防制設施設置相關管理辦法與自主管理宣導說明會會議議程</strong></p>
 				<div class="row justify-content-start align-content-center my-5">
 					<div class="col-12 col-md-4 mb-3">
-						<img class="img-fluid" src="https://air.ksepb.gov.tw/cook/images/news/107111601.png"
+						<img class="img-fluid" src="./assets/images/news_107/news_1071112_1.png"
 							alt="107 年 11 月 12 日的最新消息的會議議程表" />
 					</div>
 					<div class="col-12 col-md-4 mb-3">
-						<img class="img-fluid" src="https://air.ksepb.gov.tw/cook/images/news/107111602.png"
+						<img class="img-fluid" src="./assets/images/news_107/news_1071112_2.png"
 							alt="107 年 11 月 12 日的最新消息的第一張圖片" />
 					</div>
 					<div class="col-12 col-md-4 mb-3">
-						<img class="img-fluid" src="https://air.ksepb.gov.tw/cook/images/news/107111603.png"
+						<img class="img-fluid" src="./assets/images/news_107/news_1071112_3.png"
 							alt="107 年 11 月 12 日的最新消息的第二張圖片" />
 					</div>
 				</div>
